Fix partner cards on mobile for REAL
Fix partner cards on mobile for REAL

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -196,9 +196,8 @@
                 
                 img {
                     height: fit-content;
-                    max-height: fit-content;
-                    min-height: fit-content;
                     width: 100%;
+                    object-fit: cover;
                 }
             }
 
